--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
 /* ---------- root variables ---------- */
 :root {
   --black: #222;
-  --red: #C20028;
+  --red: #c20028;
   --grey: #b194f5;
   --white: #fff;
   --font-family: "Lato", Lato, Arial, sans-serif;
@@ -47,23 +47,101 @@ h2 {
   font-family: "IMMORTAL";
   font-size: 60px;
   color: var(--blue);
+  color: #f1f1f1;
 }
 
 h3 {
   font-family: "IMMORTAL";
+  color: #f1f1f1;
 }
 
 p {
   max-width: 600px;
+  color: #f1f1f1;
 }
 
+/* ---------- navbar ---------- */
 
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
 
-footer {
+/* Links inside the navbar */
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
   text-align: center;
-  padding: 1em;
-  font-weight: lighter;
-  font-size: 1em;
-  border-top: solid 1px var(--light-blue);
-  margin-top: 1em;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* The dropdown container */
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+/* Dropdown button */
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* ------------ section 1 ------------ */
+
+.bg {
+  position: absolute;
+  min-width: 100%;
+  z-index: -1;
+}
+
+.welcome {
+  display: block;
+  position: absolute;
+  bottom: 10%;
+  left: 10%;
 }
