--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,8 @@
 :root {
   --black: #222;
   --red: #c20028;
-  --grey: #b194f5;
-  --white: #fff;
+  --grey: #7a7a7a;
+  --white: #f1f1f1;
   --font-family: "Lato", Lato, Arial, sans-serif;
 }
 
@@ -42,48 +42,49 @@ body {
   overflow-x: hidden;
 }
 
-h1,
-h2 {
+h1 {
   font-family: "IMMORTAL";
   font-size: 60px;
-  color: var(--blue);
-  color: #f1f1f1;
+  color: var(--white);
+}
+
+h2 {
+  font-family: "IMMORTAL";
+  font-size: 40px;
+  color: var(--white);
 }
 
 h3 {
   font-family: "IMMORTAL";
-  color: #f1f1f1;
+  color: var(--white);
 }
 
 p {
   max-width: 600px;
-  color: #f1f1f1;
+  color: var(--white);
 }
 
 /* ---------- navbar ---------- */
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: var(--black);
 }
 
-/* Links inside the navbar */
 .navbar a {
   float: left;
   font-size: 16px;
-  color: white;
+  color: var(--white);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
-/* The dropdown container */
 .dropdown {
   float: left;
   overflow: hidden;
 }
 
-/* Dropdown button */
 .dropdown .dropbtn {
   font-size: 16px;
   border: none;
@@ -91,57 +92,99 @@ p {
   color: white;
   padding: 14px 16px;
   background-color: inherit;
-  font-family: inherit; /* Important for vertical align on mobile phones */
-  margin: 0; /* Important for vertical align on mobile phones */
+  font-family: inherit;
+  margin: 0;
 }
 
-/* Add a red background color to navbar links on hover */
 .navbar a:hover,
 .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: var(--red);
 }
 
-/* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: var(--black);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
-/* Links inside the dropdown */
 .dropdown-content a {
   float: none;
-  color: black;
+  color: var(--white);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
 }
 
-/* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: var(--red);
 }
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
 /* ------------ section 1 ------------ */
 
+.landing-section {
+  overflow-y: hidden;
+  height: 100vh;
+}
+
 .bg {
-  position: absolute;
-  min-width: 100%;
+  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
   z-index: -1;
 }
 
 .welcome {
-  display: block;
   position: absolute;
   bottom: 10%;
   left: 10%;
+}
+
+/* ------------ activities ------------ */
+
+.activity-section {
+  height: 500px;
+  display: flex;
+  overflow-y: hidden;
+  align-items: center;
+}
+
+.half-activity-section {
+  flex: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.half-activity-section h2 {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.half-activity-section p {
+  max-width: 550px;
+  margin: 10px auto 30px;
+}
+
+.img-half {
+  min-width: 100%;
+  min-height: 500px;
+  object-fit: cover;
+}
+
+.btn {
+  height: 100px;
+  display: block;
+  margin: auto;
+}
+.icon {
+  height: 120px;
+  display: block;
+  margin: auto;
 }
