--- a/css/main.css
+++ b/css/main.css
@@ -71,9 +71,12 @@ p {
   background-color: var(--black);
 }
 
+.logo {
+  height: 50px;
+}
+
 .navbar a {
   float: left;
-  font-size: 16px;
   color: var(--white);
   text-align: center;
   padding: 14px 16px;
@@ -89,14 +92,17 @@ p {
   font-size: 16px;
   border: none;
   outline: none;
-  color: white;
+  color: var(--white);
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
 }
 
-.navbar a:hover,
+.nav-hover:hover {
+  background-color: var(--red);
+}
+
 .dropdown:hover .drop-btn {
   background-color: var(--red);
 }
@@ -125,6 +131,13 @@ p {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+.membership {
+  position: absolute;
+  top: -8px;
+  right: 10px;
+  height: 100px;
 }
 
 /* ------------ section 1 ------------ */
