--- a/css/main.css
+++ b/css/main.css
@@ -50,11 +50,17 @@ h1 {
 
 h2 {
   font-family: "IMMORTAL";
-  font-size: 40px;
-  color: var(--white);
+  font-size: 60px;
+  color: var(--red);
 }
 
 h3 {
+  font-family: "IMMORTAL";
+  color: var(--white);
+  font-size: 40px;
+}
+
+h4 {
   font-family: "IMMORTAL";
   color: var(--white);
 }
@@ -175,7 +181,7 @@ p {
   flex-direction: column;
 }
 
-.half-activity-section h2 {
+.half-activity-section h3 {
   text-align: center;
   margin-top: 30px;
 }
@@ -199,5 +205,26 @@ p {
 .icon {
   height: 120px;
   display: block;
+  margin: auto;
+}
+
+/* ------------ activities pages styling------------ */
+
+/*-- top of the page --*/
+
+.activity-top img {
+  height: 200px;
+  display: block;
+  margin: auto;
+}
+
+.activity-top h2,
+.activity-top h4 {
+  text-align: center;
+}
+
+/*-- article --*/
+
+.article-element p {
   margin: auto;
 }
