--- a/css/main.css
+++ b/css/main.css
@@ -228,3 +228,18 @@ p {
 .article-element p {
   margin: auto;
 }
+
+.parallax {
+  background-image: url("../img/fightclub.JPG");
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+@media only screen and (max-device-width: 1366px) {
+  .parallax {
+    background-attachment: scroll;
+  }
+}
