--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ p {
 .navbar {
   overflow: hidden;
   background-color: var(--black);
+  box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.3);
 }
 
 .logo {
@@ -364,6 +365,10 @@ p {
 }
 
 /* ------------ footer styling------------ */
+
+footer {
+  box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.3);
+}
 
 .footer-elements {
   display: flex;
