--- a/css/main.css
+++ b/css/main.css
@@ -211,10 +211,9 @@ p {
   margin: auto;
 }
 
-/* ------------ activities pages styling------------ */
+/* ------------ ACTIVITIES PAGE STYLING ------------ */
 
 /*-- top of the page --*/
-
 .activity-top {
   padding: 50px 0;
   background-image: url("../img/forest.png");
@@ -268,6 +267,16 @@ p {
 }
 
 .newsletter-container button {}
+
+/*Contact*/
+.headquarters{
+  background-image: url("../img/fightclub.JPG")
+}
+/*Map*/
+#map {
+  width: 100%;
+  height: 60vh;
+}
 
 /*-- fight club parallax --*/
 
