added characters database

--- a/css/main.css
+++ b/css/main.css
@@ -404,6 +404,8 @@ p {
   margin: 50px auto;
 }
 
+/* ------------ niebelungen page ------------ */
+
 /* ------------ footer styling------------ */
 
 footer {
