--- a/css/main.css
+++ b/css/main.css
@@ -616,6 +616,7 @@ li:before {
 /* ------------ footer styling------------ */
 
 footer {
+  width: 100%;
   box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -633,6 +634,7 @@ footer h4 {
 
 .footer-element {
   margin: 0 30px;
+  height: 400px;
 }
 
 /* contact part */
@@ -709,6 +711,7 @@ footer h4 {
 .footer-map {
   width: 20%;
   height: 20%;
+  max-height: 300px;
 }
 
 /*copyright*/
