--- a/css/main.css
+++ b/css/main.css
@@ -258,7 +258,7 @@ li:before {
 /* The navigation links inside the overlay */
 .overlay a,
 .overlay span {
-  padding: 8px;
+  padding: 15px;
   text-decoration: none;
   font-size: 36px;
   color: var(--white);
@@ -471,7 +471,8 @@ li:before {
   margin: 40px auto;
 }
 
-.gallery-content a {}
+.gallery-content a {
+}
 
 .gallery-content img {
   object-fit: contain;
@@ -489,7 +490,8 @@ li:before {
   margin: 100px auto;
 }
 
-.newsletter-container button {}
+.newsletter-container button {
+}
 
 /*Contact*/
 .headquarters {
@@ -507,9 +509,11 @@ li:before {
   display: flex;
 }
 
-.single-member-image {}
+.single-member-image {
+}
 
-.single-member-text {}
+.single-member-text {
+}
 
 /*Map*/
 #map {
