--- a/css/main.css
+++ b/css/main.css
@@ -572,9 +572,19 @@ li:before {
   }
 }
 
-@media screen and (max-device-width: 800px) {
+@media screen and (max-device-width: 900px) {
   .activity-section {
+    flex-direction: column-reverse;
+    height: 100%;
+    padding:
+  }
+
+  .reverse {
     flex-direction: column;
+  }
+
+  .half-activity-section {
+    padding: 30px 0;
   }
 }
 
