--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,14 @@ li:before {
   font-size: 60px;
 }
 
+.close-arrow {
+  position: absolute;
+  top: 40px;
+  left: 15px;
+  font-size: 10px;
+  text-decoration: underline;
+}
+
 .mobile-membership {
   width: 350px;
   display: block;
