--- a/css/main.css
+++ b/css/main.css
@@ -636,9 +636,85 @@ li:before {
   }
 }
 
-.character-pic {
+.character-pic-container {
+  width: 200px;
   height: 300px;
+}
+
+.character-pic {
+  max-height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content/Box */
+.modal-content {
+  margin-bottom: 70px;
+  height: 100%;
   width: auto;
+  background-image: url("../icons/paper.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: auto;
+  padding: 50px;
+}
+
+.modal-content p,
+.modal-content h3 {
+  color: var(--black);
+  max-width: 400px;
+  margin: auto;
+}
+
+/* The Close Button */
+.close {
+  color: var(--black);
+  position: relative;
+  top: -20px;
+  right: -200px;
+  font-size: 50px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: var(--grey);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.description-top {
+  display: flex;
+  flex-direction: row;
+  max-width: 500px;
+  margin-bottom: 50px;
+}
+
+.short-description {
+  margin: 15px;
+}
+
+.character-pic-sheet {
+  width: 200px;
+  height: 300px;
 }
 
 /* ------------ footer styling------------ */
