--- a/css/main.css
+++ b/css/main.css
@@ -469,8 +469,7 @@ li:before {
   margin: 40px auto;
 }
 
-.gallery-content a {
-}
+.gallery-content a {}
 
 .gallery-content img {
   object-fit: contain;
@@ -488,8 +487,7 @@ li:before {
   margin: 100px auto;
 }
 
-.newsletter-container button {
-}
+.newsletter-container button {}
 
 /*Contact*/
 .headquarters {
@@ -507,14 +505,12 @@ li:before {
   display: flex;
 }
 
-.single-member-image {
-}
+.single-member-image {}
 
-.single-member-text {
-}
+.single-member-text {}
 
 /*Map*/
-#map {
+.map {
   width: 100%;
   height: 60vh;
   margin: 100px 0;
@@ -728,11 +724,7 @@ footer h4 {
 }
 
 /* map part */
-.footer-map {
-  width: 20%;
-  height: 20%;
-  max-height: 300px;
-}
+.footer-map {}
 
 /*copyright*/
 .copyright {
